packages/jsii/test/negatives/neg.struct-hint-on-class.ts
/**
 * Attempting to tag a class as a struct.
 *
 * @struct
 */
export class ClassName { }
